--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a>
       <ul class="hidden md:flex space-x-8 text-sm font-semibold">
         <li><a href="#features" class="hover:text-primary">Features</a></li>
-        <li><a href="#shops" class="hover:text-primary">Shops</a></li>
+        <li><a href="#shops" class="hover:text-primary">Alle&nbsp;Shops</a></li>
         <li><a href="#about" class="hover:text-primary">Über&nbsp;uns</a></li>
         <li><a href="#contact" class="hover:text-primary">Kontakt</a></li>
       </ul>
@@ -47,7 +47,7 @@
     <div id="mobileMenu" class="md:hidden hidden bg-black/90 backdrop-blur-sm">
       <ul class="flex flex-col items-center space-y-6 py-6 text-base font-semibold">
         <li><a href="#features" onclick="toggleMenu()">Features</a></li>
-        <li><a href="#shops" onclick="toggleMenu()">Shops</a></li>
+        <li><a href="#shops" onclick="toggleMenu()">Alle&nbsp;Shops</a></li>
         <li><a href="#about" onclick="toggleMenu()">Über&nbsp;uns</a></li>
         <li><a href="#contact" onclick="toggleMenu()">Kontakt</a></li>
       </ul>
@@ -58,17 +58,20 @@
   <section id="hero" class="h-screen flex items-center justify-center bg-cover bg-center relative" style="background-image:url('images/hero.jpg');">
     <div class="absolute inset-0 bg-black/70"></div>
     <div class="relative z-10 text-center p-8">
-      <h1 class="text-4xl md:text-6xl font-black leading-tight drop-shadow-lg">Klare Aussicht<br><span class="text-primary">auf&nbsp;Gewinn</span></h1>
-      <p class="mt-6 mb-8 text-lg md:text-xl max-w-xl mx-auto">Sportwetten neu&nbsp;erleben – in&nbsp;Süddeutschland&nbsp;zuhause.</p>
-      <a href="#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Unsere&nbsp;Standorte</a>
+      <h1 class="text-4xl md:text-6xl font-black leading-tight drop-shadow-lg">Deine&nbsp;Arena<br><span class="text-primary">Dein&nbsp;Einsatz</span></h1>
+      <p class="mt-6 mb-8 text-lg md:text-xl max-w-xl mx-auto">Professionalität&nbsp;und&nbsp;Sicherheit</p>
+      <a href="#shops" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Deine&nbsp;Arena&nbsp;in&nbsp;Deiner&nbsp;Nähe</a>
     </div>
   </section>
 
   <!-- ========== Features ========== -->
   <section id="features" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
-      <h2 class="text-4xl font-extrabold mb-4">Warum&nbsp;Wettarena?</h2>
-      <p class="max-w-2xl mx-auto">Innovatives&nbsp;Design, exklusive&nbsp;Ausstattung und modernste&nbsp;Technik – wir setzen Maßstäbe im&nbsp;stationären Sportwetten-Erlebnis.</p>
+      <h2 class="text-4xl font-extrabold mb-4">
+        Warum
+        <img src="images/logo.svg" alt="Wettarena Süd Logo" class="inline h-14 align-middle" />
+        ?
+      </h2>
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
       <div class="p-10 bg-surface rounded-2xl shadow-xl text-center">
@@ -89,25 +92,25 @@
   <!-- ========== Shops ========== -->
   <section id="shops" class="py-24 bg-black">
     <div class="container mx-auto text-center mb-16 px-6">
-      <h2 class="text-4xl font-extrabold mb-4">Unsere&nbsp;Shops</h2>
-      <p class="max-w-2xl mx-auto">Besuchen&nbsp;Sie uns in den modernsten Wettfilialen&nbsp;Süddeutschlands.</p>
+      <h2 class="text-4xl font-extrabold mb-4">Unseren&nbsp;Arenen</h2>
+      <p class="max-w-2xl mx-auto">Besuchen&nbsp;Sie&nbsp;uns&nbsp;in&nbsp;den&nbsp;modernsten&nbsp;Wettfilialen&nbsp;Süddeutschlands.</p>
     </div>
     <div class="container mx-auto grid gap-10 md:grid-cols-3 px-6">
-      <!-- München Card -->
-      <a href="shops/shop-muenchen.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
-        <img src="images/shop1.jpg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold text-primary">München&nbsp;– Leopoldstraße</h3><p class="text-sm">Leopoldstraße&nbsp;123<br>80804&nbsp;München</p></div>
+      <!-- München Card 1-->
+      <a href="/shops/shop-muenchen1.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="images/muenchen1/image00019.jpeg" alt="Shop&nbsp;München" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">München</h3><p class="text-sm">Landsberger&nbsp;Straße&nbsp;476<br>81241&nbsp;München</p></div>
       </a>
-      <!-- Nürnberg Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop2.jpg" alt="Shop&nbsp;Nürnberg" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold text-primary">Nürnberg&nbsp;– Innenstadt</h3><p class="text-sm">Königstraße&nbsp;45<br>90402&nbsp;Nürnberg</p></div>
-      </div>
-      <!-- Stuttgart Card -->
-      <div class="bg-surface rounded-2xl overflow-hidden shadow-lg">
-        <img src="images/shop3.jpg" alt="Shop&nbsp;Stuttgart" class="h-48 w-full object-cover" loading="lazy" />
-        <div class="p-6"><h3 class="text-xl font-bold text-primary">Stuttgart&nbsp;– Königstraße</h3><p class="text-sm">Königstraße&nbsp;26<br>70173&nbsp;Stuttgart</p></div>
-      </div>
+      <!-- Augsburg Card -->
+      <a href="/shops/shop-augsburg.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="images/augsburg/image00003.jpeg" alt="Shop&nbsp;Augsburg" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Augsburg</h3><p class="text-sm">Wertachstraße<br>81653&nbsp;Augsburg</p></div>
+      </a>
+      <!-- Kaufbeuren Card -->
+      <a href="/shops/shop-kaufbeuren.html" class="block bg-surface rounded-2xl overflow-hidden shadow-lg hover:ring-2 hover:ring-primary transition">
+        <img src="images/kaufbeuren/image00004.jpeg" alt="Shop&nbsp;Kaufbeuren" class="h-48 w-full object-cover" loading="lazy" />
+        <div class="p-6"><h3 class="text-xl font-bold text-primary">Kaufbeuren</h3><p class="text-sm">Kemptnerstraße&nbsp;21<br>87600&nbsp;Kaufbeuren</p></div>
+      </a>
     </div>
     <div class="container mx-auto text-center mt-12 px-6">
       <a href="shops/shops.html" class="inline-block px-10 py-4 bg-primary hover:bg-primary/80 rounded-full text-lg font-semibold transition">Alle&nbsp;Shops&nbsp;ansehen</a>
@@ -122,9 +125,9 @@
     </div>
     <div class="container mx-auto max-w-3xl px-6">
       <ol class="relative border-l border-gray-700">
-        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2010&nbsp;– Gründung</h3><p class="text-sm text-gray-400">Start der ersten Filiale in&nbsp;München.</p></li>
-        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2015&nbsp;– Expansion</h3><p class="text-sm text-gray-400">Fünf weitere Standorte in&nbsp;Bayern und Baden-Württemberg.</p></li>
-        <li class="ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2024&nbsp;– Relaunch</h3><p class="text-sm text-gray-400">Neues Store-Design &amp; digitales Kundenportal.</p></li>
+        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2010&nbsp;–&nbsp;2022</h3><p class="text-sm text-gray-400">Franchise&nbsp;Partner&nbsp;Tipico</p></li>
+        <li class="mb-10 ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2022&nbsp;–&nbsp;2023</h3><p class="text-sm text-gray-400">Franchise&nbsp;Partner&nbsp;Tiptorro</p></li>
+        <li class="ml-6"><span class="absolute -left-3 top-2 w-6 h-6 rounded-full bg-primary"></span><h3 class="font-semibold">2024&nbsp;–&nbsp;heute</h3><p class="text-sm text-gray-400">Franchise&nbsp;Partner&nbsp;Wettarena</p></li>
       </ol>
     </div>
   </section>
@@ -136,9 +139,9 @@
       <div class="grid gap-10 md:grid-cols-2">
         <div>
           <h3 class="text-xl font-bold mb-3 text-primary">Wettarena&nbsp;Süd GmbH</h3>
-          <p>Leopoldstraße&nbsp;123<br>80804&nbsp;München</p>
+          <p>&Auml;u&szlig;ere&nbsp;Bayreuther&nbsp;Stra&szlig;e&nbsp;55<br>90409&nbsp;N&uuml;rnberg</p>
           <p class="mt-4"><strong>Telefon:</strong> +49&nbsp;89&nbsp;1234567</p>
-          <p><strong>E-Mail:</strong> <a href="mailto:info@wettarena-sued.de" class="text-primary hover:underline">info@wettarena-sued.de</a></p>
+          <p><strong>E-Mail:</strong> <a href="mailto:office@wettarena-sued.de" class="text-primary hover:underline">office@wettarena-sued.de</a></p>
         </div>
         <form class="space-y-4" onsubmit="event.preventDefault(); alert('Danke für Ihre Nachricht!'); this.reset();">
           <input type="text" placeholder="Ihr&nbsp;Name" class="w-full p-3 bg-surface border border-gray-700 rounded-xl text-white" required />
@@ -151,9 +154,22 @@
   </section>
 
   <!-- ========== Footer ========== -->
-  <footer class="py-8 bg-black text-gray-500 text-center text-sm">
-    <p>©&nbsp;2025 Wettarena&nbsp;Süd GmbH – Alle Rechte vorbehalten.</p>
+  <footer class="py-8 bg-black text-gray-500 text-center text-sm space-x-4">
+    <p class="mb-2">© 2025 Wettarena Süd GmbH – Alle Rechte vorbehalten.</p>
+    <a href="/impressum.html" class="hover:underline">Impressum</a>
+    <a href="/datenschutz.html" class="hover:underline">Datenschutz</a>
   </footer>
+
+    <!-- ========== Cookie Banner ========== -->
+  <div id="cookie-banner" class="fixed bottom-0 left-0 right-0 bg-surface text-white p-4 text-center z-50 shadow-lg">
+    <p class="text-sm">
+      Diese Website verwendet Cookies, um dir das bestmögliche Erlebnis zu bieten.
+      <a href="/datenschutz.html" class="underline text-primary">Mehr erfahren</a>
+    </p>
+    <button onclick="acceptCookies()" class="mt-2 px-4 py-2 bg-primary rounded-full font-semibold hover:bg-primary/80">
+      Einverstanden
+    </button>
+  </div>
 
   <!-- ========== Scripts ========== -->
   <script>
@@ -165,6 +181,28 @@
       mobileMenu.classList.toggle('hidden');
     }
     menuBtn.addEventListener('click', toggleMenu);
+
+    function setCookie(name, value, days) {
+      const date = new Date();
+      date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+      document.cookie = `${name}=${value}; expires=${date.toUTCString()}; path=/; SameSite=Lax`;
+    }
+
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(';').shift();
+      return null;
+    }
+
+    function acceptCookies() {
+      setCookie("cookiesAccepted", "true", 5);
+      document.getElementById("cookie-banner").style.display = "none";
+    }
+
+    if (getCookie("cookiesAccepted") === "true") {
+      document.getElementById("cookie-banner").style.display = "none";
+    }
   </script>
 </body>
 </html>
